Добавил запрос на получение книг из библиотеки по статусу
